src/objects/Credential_Profile__c.object
<CustomObject>
    <description>An object for creating descriptive / meta-data / look up records for given credentials required of Mentors or Mentor household members.</description>
    <fields>
        <fullName>Applies_CPS_Full_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: CPS Full Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Conviction_Past_5_Federal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Conviction Past 5 Federal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Conviction_Past_5_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Conviction Past 5 State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Documented_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Documented Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Exam_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Exam Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Expiration_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies: Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_FBI_Full_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: FBI Full Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Federal_Conviction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Federal Conviction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Note__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies: Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Outcome_of_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Outcome of Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Received_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies: Received Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Requested_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Applies: Requested Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_State_Conviction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: State Conviction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Type_of_Conviction_Federal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Type of Conviction Federal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applies_Type_of_Conviction_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies: Type of Conviction (State)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DHR_Documented_Field__c</fullName>
        <description>A string that is the API name of the Mentor_Tracking_Report_Record__c field that this credential impacts for &quot;documented&quot;  date purposes.</description>
        <label>DHR Documented Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHR_Received_Field__c</fullName>
        <description>A string that is the API name of the Mentor_Tracking_Report_Record__c field that this credential impacts for &quot;received&quot; purposes.</description>
        <label>DHR Received Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHR_Scope__c</fullName>
        <description>A field that indicates whether this credential profile applies for the contact, the entire household, or is not applicable, for the DHR report.</description>
        <label>DHR Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Adult, Mentor Minors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help_Text_Note__c</fullName>
        <label>Help Text: Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPA_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPA Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needed_for_18_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needed for 18 &amp; Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needed_for_Under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needed for Under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLM_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean to determine whether or not a credential for Mentor tracking is required by the Office of Licensing and Monitoring.</description>
        <label>OLM Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Co-Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Foster_Parent_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Foster Parent Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Foster_Parent_Relative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Foster Parent Relative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Pet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Pet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Resident_Non_Rel_Over_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Resident-Non Rel Over 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Resident_Non_Rel_Under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Resident-Non Rel Under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Resident_Non_Relative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional for Resident Non-Relative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean to determine whether or not a credential for Mentor tracking is a &quot;Performance Based Indicator&quot; (PBI).</description>
        <label>PBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Co-Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Foster_Parent_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Foster Parent Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Foster_Parent_Relative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Foster Parent Relative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Pet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required_for_Pet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Resident_Non_Relative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required for Resident Non-Relative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_Credentials__c</fullName>
        <label>Similar Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credential Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applies_Documented_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credential Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credential Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>